@@ -6,7 +6,7 @@ HOSTS:
       - default
       - master
     platform:   el-7-x86_64
-    box:        elastic/oel-7-x86_64
+    box:        onyxpoint/oel-7-x86_64
     hypervisor: vagrant
 
   oel6:
@@ -14,7 +14,7 @@ HOSTS:
       - agent
       - client
     platform:   el-6-x86_64
-    box:        elastic/oel-6-x86_64
+    box:        onyxpoint/oel-6-x86_64
     hypervisor: vagrant
 
 CONFIG:
