@@ -1,3 +1,6 @@
+* Thu Nov 01 2018 Jeanne Greulich <jeanner.greulich@onyxpoint.com> - 0.0.5
+- static asset updates for puppet 5
+
 * Sun Mar 11 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.4
 - Updated to work with Puppet 5 and OEL
 
